# xy-cut-tree

./: CMakeLists.txt  README.md  read_me.txt  xy_cut.cpp
reduction sample/: tree_reduction_sample.cpp
